[tool.poetry]
name = "ez-torch"
version = "0.1.4"
description = "Utility functions and fluent interface for pytorch tensors and modules"
authors = ["Iliya Zhecev <iliya.zhechev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.8.1"
torchvision = "^0.9.1"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
tqdm = "^4.61.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.5b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
